<resources>
    <string name="app_name">Fee Calc</string>
    <string name="text_amount">Amount ($)</string>
    <string name="text_rate">Rate (%)</string>
    <string name="text_years">Years</string>
    <string name="text_total_amount">"The total amount will be "</string>
    <string name="text_welcome">Welcome to <b>Fee Calculator</b>. Please, configure your amount, time and rate and click <b>Evaluate</b>.</string>
    <string name="text_default_amount">100000</string>
    <string name="button_evaluate">Calculate Fee</string>
    <string name="text_fee_result">Your monthly fee is</string>
    <string name="starter_amount">15</string>
    <string name="table_comparison">%1s : %2s%3s</string>
</resources>
